# diff-sentry

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  VENDOR.md  pyproject.toml
.claude/rules/: handoff.md
.github/workflows/: ci.yml
diff_sentry/: __init__.py  __main__.py  assemble.py  claude_agent_lm.py  cli.py  config.py  deep_classify.py  detect.py  emit.py  fetch_tool.py  indicators.py  ingest.py  normalize.py  response.py  rl_export.py  rubric.py  schema.py
diff_sentry/skills/: ci-injection-patterns.md  prompt-injection-catalog.md  triage-a-change.md
eval/: README.md  pyproject.toml  taskset.example.json
eval/diff_sentry_eval/: __init__.py  __main__.py  cli.py  judge.py  schema.py  score.py  taskset.py
eval/tests/: conftest.py  test_boundary.py  test_cli.py  test_judge.py  test_schema.py  test_score.py  test_taskset.py
studio/: DESIGN.md  README.md  pyproject.toml
studio/diff_sentry_studio/: __init__.py  app.py  iterations.py  live.py  mapper.py
studio/static/: app.js  index.html  run-core.js  style.css  trajectory.js
studio/tests/: run-core.test.js  static-contract.test.js  test_app.py  test_iterations.py  test_live.py  test_mapper.py  trajectory.test.js
tests/: conftest.py  test_assemble.py  test_cli.py  test_config.py  test_deep_classify.py  test_detect.py  test_detection_quality.py  test_emit.py  test_export.py  test_fetch_tool.py  test_forward_offline.py  test_incident_hackerbot_claw.py  test_indicators.py  test_ingest.py  test_injection_offline.py  test_normalize.py  test_provenance.py  test_response.py  test_rubric.py  test_schema.py  test_subscription.py
tests/corpus/: change_corpus.json  hackerbot_claw_incident.json
