[project]
name = "diff-sentry"
version = "0.3.0"
description = "Classify a GitHub change (PR/issue/push) for malicious intent via an RLM harness — a BewAIre-style detector (rlm-kit consumer)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Boik Su" }]
keywords = ["rlm", "dspy", "security", "malicious-code-detection", "supply-chain-security", "prompt-injection", "siem"]
dependencies = [
    # rlm-kit is consumed via a git source until it ships on PyPI (see [tool.uv.sources]).
    "rlm-kit",
    "pydantic>=2.0",
    "httpx>=0.27",      # the GitHub-allowlisted enrichment fetcher + the host-side SIEM emitter
]

[project.optional-dependencies]
# The swappable second-stage classifier's default `self` backend talks an OpenAI-compatible API.
classify = ["openai>=1.0"]
observe = ["langfuse>=4.6.1", "openinference-instrumentation-dspy>=0.1.36"]
# Run planner + analyst on a Claude Pro/Max subscription (DS_ROOT_LM / DS_SUB_LM =
# `claude-agent-sdk/<id>`) via rlm-kit's `rlm_kit.ClaudeAgentLM`. Installs the Claude Agent SDK the
# adapter needs; also needs the Claude Code CLI installed + logged in — a runtime prerequisite pip
# can't express (see .env.example).
subscription = ["claude-agent-sdk>=0.1.60"]

# rlm-kit is public but not yet on PyPI, so it comes in via git (uv.lock pins the exact commit); swap to
# a version spec once it ships on PyPI. The dogfooding loop rlm-kit is designed around still holds: when
# co-developing rlm-kit locally, overlay an editable install (`uv pip install -e ../rlm-kit`) or bump
# this ref after pushing, so a fix that surfaces here can be promoted into the kit.
[tool.uv.sources]
rlm-kit = { git = "https://github.com/qazbnm456/rlm-kit.git", branch = "main" }

# The in-repo workspace members — each its OWN package, NOT part of the `diff_sentry` wheel:
#   studio/ — the visualization console (fastapi/uvicorn/frontend, behind its `live` extra);
#   eval/   — the offline, reward-free LLM-as-judge scorecard (a one-way trace reader).
# Both read this package's trace/DetectionResponse contract, so co-locating keeps them in sync. The
# external git source (rlm-kit) lives here at the workspace root and applies to every member.
[tool.uv.workspace]
members = ["studio", "eval"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# `packages` ships every file under the package dir — the skills/*.md ride along automatically. (A
# redundant force-include of those same paths duplicates them and breaks the wheel build.)
packages = ["diff_sentry"]
