[project]
name = "diff-sentry-eval"
version = "0.1.0"
description = "Offline, reward-free evaluation harness for diff-sentry — score recorded runs against the ATLAS 4-category (TF/TA/TG/PA, 0-10) LLM-as-judge of the assembled malicious-change VERDICT and render a terminal scorecard. A one-way reader of the trace contract; never a reward."
requires-python = ">=3.11"  # matches the sibling diff-sentry (>=3.11); keeps `uv run` resolvable
# diff-sentry is a CORE dependency (unlike studio, which gates it behind a `live` extra): the score path
# imports `diff_sentry.verdict_from_events` / `run_labels` / `run_metrics` / `AssembledVerdict` (the PUBLIC
# surface, same rule the studio follows) for every mode, so it must always resolve. pydantic + rlm-kit
# (trace readers, make_model_tool) arrive as diff-sentry deps.
dependencies = [
    "diff-sentry",
]

[project.optional-dependencies]
# The real (live) judge talks an OpenAI-compatible endpoint; the stub judge needs nothing.
judge = ["openai>=1.0"]
dev = ["pytest>=8"]

# In-repo: diff-sentry is the workspace ROOT package (eval/ is a member of it). External sources (rlm-kit)
# are declared at the workspace root's pyproject and apply here transitively.
[tool.uv.sources]
diff-sentry = { workspace = true }

[project.scripts]
diff-sentry-eval = "diff_sentry_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diff_sentry_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
